--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "pydantic-settings>=2.1.0",
     "ruamel.yaml>=0.18.0",
+    "numpy>=1.24.0",
 ]
 
 [project.optional-dependencies]
