--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "pydantic-settings>=2.1.0",
     "ruamel.yaml>=0.18.0",
     "numpy>=1.24.0",
+    "jsonschema>=4.25.1",
 ]
 
 [project.optional-dependencies]
