more webrtc and video

--- a/services/negotiation/Makefile
+++ b/services/negotiation/Makefile
@@ -1,72 +1,36 @@
-.PHONY: help dev test run fmt type check clean docker-build docker-run
+# Makefile for Negotiation Service Test Harness
 
-# Default target
+.PHONY: help install run clean test
+
+PYTHON := python3
+PIP := pip3
+
 help:
 	@echo "Available commands:"
-	@echo "  dev      - Run development server"
-	@echo "  test     - Run tests"
-	@echo "  run      - Run production server"
-	@echo "  fmt      - Format code with black and ruff"
-	@echo "  type     - Type check with mypy"
-	@echo "  check    - Run all checks (fmt, type, test)"
-	@echo "  clean    - Clean up build artifacts"
-	@echo "  docker-build - Build Docker image"
-	@echo "  docker-run   - Run with Docker Compose"
+	@echo "  install    - Install dependencies"
+	@echo "  run        - Run the test harness server"
+	@echo "  clean      - Clean up Python cache files"
+	@echo "  test       - Run tests"
 
-# Development
-dev:
-	uv run uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
-
-# Testing
-test:
-	uv run pytest tests/ -v --cov=.
-
-test-watch:
-	uv run pytest-watch tests/ -v
-
-# Production
-run:
-	uv run uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers 1
-
-# Code formatting
-fmt:
-	uv run black .
-	uv run ruff check --fix .
-
-# Type checking
-type:
-	uv run mypy .
-
-# All checks
-check: fmt type test
-
-# Clean up
-clean:
-	rm -rf .coverage
-	rm -rf htmlcov
-	rm -rf .pytest_cache
-	rm -rf __pycache__
-	rm -rf .mypy_cache
-	find . -type d -name __pycache__ -exec rm -rf {} +
-
-# Docker
-docker-build:
-	docker build -t samson-negotiation-service .
-
-docker-run:
-	docker-compose up --build
-
-# Install dependencies
 install:
-	uv sync
+	$(PIP) install -r requirements-providers.txt
+	@echo "Dependencies installed successfully"
 
-install-dev:
-	uv sync --dev
-	uv run pre-commit install
+run:
+	@echo "Starting Enhanced AI Avatar test harness server..."
+	@echo "Open http://localhost:8000 in your browser to test the AI avatar"
+	$(PYTHON) enhanced_harness.py
 
-# Pre-commit hooks
-pre-commit:
-	uv run pre-commit run --all-files
+run-simple:
+	@echo "Starting Simple AI Avatar test harness server..."
+	@echo "Open http://localhost:8000 in your browser to test the AI avatar"
+	$(PYTHON) standalone_harness.py
 
-pre-commit-update:
-	uv run pre-commit autoupdate
+clean:
+	find . -type f -name "*.pyc" -delete
+	find . -type d -name "__pycache__" -delete
+	find . -type d -name "*.egg-info" -exec rm -rf {} +
+	@echo "Cache files cleaned"
+
+test:
+	pytest tests/ -v
