working veo3 generations!

--- a/services/negotiation/Makefile
+++ b/services/negotiation/Makefile
@@ -9,8 +9,10 @@ help:
 	@echo "Available commands:"
 	@echo "  install    - Install dependencies using uv"
 	@echo "  dev        - Install dependencies in development mode using uv"
-	@echo "  run        - Run the test harness server"
+	@echo "  run        - Run the negotiation service"
+	@echo "  video-gen  - Run AI video generator tool"
 	@echo "  launch     - Interactive launch script with port management"
+	@echo "  setup      - Run environment setup wizard"
 	@echo "  clean      - Clean up Python cache files"
 	@echo "  test       - Run tests using pytest"
 
@@ -23,14 +25,13 @@ dev:
 	@echo "Development dependencies installed successfully using uv"
 
 run:
-	@echo "Starting Enhanced AI Avatar test harness server..."
-	@echo "Open http://localhost:8000 in your browser to test the AI avatar"
-	$(PYTHON) enhanced_harness.py
+	@echo "Starting negotiation service..."
+	@echo "Open http://localhost:8000 in your browser to test"
+	$(UV) run uvicorn main:app --host 127.0.0.1 --port 8000 --reload
 
-run-simple:
-	@echo "Starting Simple AI Avatar test harness server..."
-	@echo "Open http://localhost:8000 in your browser to test the AI avatar"
-	$(PYTHON) standalone_harness.py
+video-gen:
+	@echo "Running AI video generator..."
+	$(UV) run python tools/real_video_generator.py
 
 clean:
 	find . -type f -name "*.pyc" -delete
@@ -43,4 +44,8 @@ test:
 
 launch:
 	@echo "Starting interactive launch script..."
-	./launch.sh
+	./scripts/launch.sh
+
+setup:
+	@echo "Running environment setup..."
+	./scripts/setup_env.sh
