--- a/services/negotiation/pyproject.toml
+++ b/services/negotiation/pyproject.toml
@@ -17,25 +17,20 @@ dependencies = [
     "structlog>=23.0.0",
     "jsonschema>=4.0.0",
     "ruamel.yaml>=0.17.0",
-
     # WebRTC and media processing
     "aiortc>=1.6.0",
-    "av>=10.0.0",  # PyAV for video processing
-
+    "av>=10.0.0", # PyAV for video processing
     # Optional dependencies for enhanced functionality
-    "numpy>=1.24.0",  # For video frame processing
-    "psutil>=5.9.0",  # For resource monitoring
-
+    "numpy>=1.24.0", # For video frame processing
+    "psutil>=5.9.0", # For resource monitoring
     # Development and testing
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.0.0",
-
     # Additional dependencies from imports
     "websockets>=12.0.0",
     "python-multipart>=0.0.6",
     "python-dotenv>=1.0.0",
-
     # Provider dependencies
     "google-generativeai>=0.8.0",
     "openai>=1.0.0",
@@ -46,6 +41,9 @@ dependencies = [
     "torchaudio>=2.0.0",
     "soundfile>=0.12.0",
     "scipy>=1.11.0",
+    "pillow>=11.3.0",
+    "aiohttp>=3.12.15",
+    "google-genai>=1.38.0",
 ]
 
 [project.optional-dependencies]
