VOICES FINALLY WORK!!!!

--- a/services/negotiation/env.example
+++ b/services/negotiation/env.example
@@ -43,6 +43,16 @@ WHISPER_DEVICE=cpu
 XTTS_MODEL_PATH=models/xtts
 XTTS_DEVICE=cpu
 
+# Audio Quality Settings
+# Use 44100 for high-quality TTS providers like ElevenLabs
+# Use 16000 for faster local providers like XTTS
+AUDIO_SAMPLE_RATE=44100
+
+# ElevenLabs TTS (Optional - provides high-quality voice synthesis)
+ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+ELEVENLABS_VOICE_ID=21m00Tcm4TlvDq8ikWAM
+ELEVENLABS_MODEL=eleven_monolingual_v1
+
 # Content Safety
 CONTENT_SAFETY_ENABLED=true
 CONTENT_SAFETY_PROVIDER=rule_based
