--- a/services/negotiation/pyproject.toml
+++ b/services/negotiation/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "pillow>=11.3.0",
     "aiohttp>=3.12.15",
     "google-genai>=1.38.0",
+    "elevenlabs>=2.16.0",
 ]
 
 [project.optional-dependencies]
