talking talking talking

--- a/services/negotiation/env.example
+++ b/services/negotiation/env.example
@@ -65,3 +65,20 @@ MAX_CONCURRENT_SESSIONS=100
 AVATAR_STYLE=diplomatic
 VOICE_ID=default
 LATENCY_TARGET_MS=500
+
+# SadTalker Portrait Animation (Apple Silicon Optimized)
+SADTALKER_DIR=~/Projects/SadTalker
+PORTRAIT_PATH=assets/avatars/british_general_frame.jpg
+SADTALKER_DEVICE=mps  # mps for Apple Silicon, cpu for others
+SADTALKER_ENHANCE=true  # Use GFPGAN enhancement
+SADTALKER_STILL_MODE=false  # Minimal head movement for formal speeches
+SADTALKER_ENABLED=false  # Disabled by default (too slow: ~20 minutes per video)
+
+# Wav2Lip Configuration (DEPRECATED - Use D-ID instead)
+WAV2LIP_ENABLED=false
+WAV2LIP_DIR=~/Projects/Wav2Lip
+
+# D-ID Talking Avatar (Cloud Service - RECOMMENDED)
+DID_ENABLED=true
+DID_API_KEY=  # Get free trial at https://studio.d-id.com/account-settings
+PUBLIC_BASE_URL=http://localhost:8000  # Public URL for serving audio/images to D-ID
